Fixed MENU paddings on tablet

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -2,7 +2,6 @@
   box-sizing: border-box;
   display: flex;
   background-color: $c-black;
-  
 
   &__block {
     box-sizing: border-box;
@@ -14,6 +13,7 @@
   }
 
   &__logo {
+    margin-left: 5px;
     width: 128px;
     height: 24px;
 
