--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -10,6 +10,11 @@
 
   z-index: 1;
 
+  @include onTablet {
+    padding-left: 44px;
+    padding-right: 44px;
+  }
+
   &__items {
     display: flex;
     flex-direction: column;
@@ -20,7 +25,6 @@
     @include onTablet {
       gap: 48px;
     }
-
   }
 
   &__list {
